--- a/src/Doom.vcxproj
+++ b/src/Doom.vcxproj
@@ -213,6 +213,7 @@
     <ClCompile Include="s_sound.cpp" />
     <ClCompile Include="tables.cpp" />
     <ClCompile Include="v_video.cpp" />
+    <ClCompile Include="window.cpp" />
     <ClCompile Include="wi_stuff.cpp" />
     <ClCompile Include="w_wad.cpp" />
     <ClCompile Include="z_zone.cpp" />
@@ -278,6 +279,7 @@
     <ClInclude Include="tables.h" />
     <ClInclude Include="unistd.h" />
     <ClInclude Include="v_video.h" />
+    <ClInclude Include="window.h" />
     <ClInclude Include="wi_stuff.h" />
     <ClInclude Include="w_wad.h" />
     <ClInclude Include="z_zone.h" />
