--- a/src/Doom.vcxproj.filters
+++ b/src/Doom.vcxproj.filters
@@ -1,132 +1,389 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="am_map.cpp" />
-    <ClCompile Include="d_items.cpp" />
-    <ClCompile Include="d_main.cpp" />
-    <ClCompile Include="d_net.cpp" />
-    <ClCompile Include="doomdef.cpp" />
-    <ClCompile Include="doomstat.cpp" />
-    <ClCompile Include="dstrings.cpp" />
-    <ClCompile Include="f_finale.cpp" />
-    <ClCompile Include="f_wipe.cpp" />
-    <ClCompile Include="g_game.cpp" />
-    <ClCompile Include="hu_lib.cpp" />
-    <ClCompile Include="hu_stuff.cpp" />
-    <ClCompile Include="i_main.cpp" />
-    <ClCompile Include="i_net.cpp" />
-    <ClCompile Include="i_sound.cpp" />
-    <ClCompile Include="i_system.cpp" />
-    <ClCompile Include="i_video.cpp" />
-    <ClCompile Include="info.cpp" />
-    <ClCompile Include="m_argv.cpp" />
-    <ClCompile Include="m_bbox.cpp" />
-    <ClCompile Include="m_cheat.cpp" />
-    <ClCompile Include="m_fixed.cpp" />
-    <ClCompile Include="m_menu.cpp" />
-    <ClCompile Include="m_misc.cpp" />
-    <ClCompile Include="m_random.cpp" />
-    <ClCompile Include="m_swap.cpp" />
-    <ClCompile Include="p_ceilng.cpp" />
-    <ClCompile Include="p_doors.cpp" />
-    <ClCompile Include="p_enemy.cpp" />
-    <ClCompile Include="p_floor.cpp" />
-    <ClCompile Include="p_inter.cpp" />
-    <ClCompile Include="p_lights.cpp" />
-    <ClCompile Include="p_map.cpp" />
-    <ClCompile Include="p_maputl.cpp" />
-    <ClCompile Include="p_mobj.cpp" />
-    <ClCompile Include="p_plats.cpp" />
-    <ClCompile Include="p_pspr.cpp" />
-    <ClCompile Include="p_saveg.cpp" />
-    <ClCompile Include="p_setup.cpp" />
-    <ClCompile Include="p_sight.cpp" />
-    <ClCompile Include="p_spec.cpp" />
-    <ClCompile Include="p_switch.cpp" />
-    <ClCompile Include="p_telept.cpp" />
-    <ClCompile Include="p_tick.cpp" />
-    <ClCompile Include="p_user.cpp" />
-    <ClCompile Include="r_bsp.cpp" />
-    <ClCompile Include="r_data.cpp" />
-    <ClCompile Include="r_draw.cpp" />
-    <ClCompile Include="r_main.cpp" />
-    <ClCompile Include="r_plane.cpp" />
-    <ClCompile Include="r_segs.cpp" />
-    <ClCompile Include="r_sky.cpp" />
-    <ClCompile Include="r_things.cpp" />
-    <ClCompile Include="s_sound.cpp" />
-    <ClCompile Include="sounds.cpp" />
-    <ClCompile Include="st_lib.cpp" />
-    <ClCompile Include="st_stuff.cpp" />
-    <ClCompile Include="tables.cpp" />
-    <ClCompile Include="v_video.cpp" />
-    <ClCompile Include="w_wad.cpp" />
-    <ClCompile Include="wi_stuff.cpp" />
-    <ClCompile Include="z_zone.cpp" />
+    <ClCompile Include="am_map.cpp">
+      <Filter>OldCode</Filter>
+    </ClCompile>
+    <ClCompile Include="d_items.cpp">
+      <Filter>OldCode</Filter>
+    </ClCompile>
+    <ClCompile Include="d_main.cpp">
+      <Filter>OldCode</Filter>
+    </ClCompile>
+    <ClCompile Include="d_net.cpp">
+      <Filter>OldCode</Filter>
+    </ClCompile>
+    <ClCompile Include="doomdef.cpp">
+      <Filter>OldCode</Filter>
+    </ClCompile>
+    <ClCompile Include="doomstat.cpp">
+      <Filter>OldCode</Filter>
+    </ClCompile>
+    <ClCompile Include="dstrings.cpp">
+      <Filter>OldCode</Filter>
+    </ClCompile>
+    <ClCompile Include="f_finale.cpp">
+      <Filter>OldCode</Filter>
+    </ClCompile>
+    <ClCompile Include="f_wipe.cpp">
+      <Filter>OldCode</Filter>
+    </ClCompile>
+    <ClCompile Include="g_game.cpp">
+      <Filter>OldCode</Filter>
+    </ClCompile>
+    <ClCompile Include="hu_lib.cpp">
+      <Filter>OldCode</Filter>
+    </ClCompile>
+    <ClCompile Include="hu_stuff.cpp">
+      <Filter>OldCode</Filter>
+    </ClCompile>
+    <ClCompile Include="i_main.cpp">
+      <Filter>OldCode</Filter>
+    </ClCompile>
+    <ClCompile Include="i_net.cpp">
+      <Filter>OldCode</Filter>
+    </ClCompile>
+    <ClCompile Include="i_sound.cpp">
+      <Filter>OldCode</Filter>
+    </ClCompile>
+    <ClCompile Include="i_system.cpp">
+      <Filter>OldCode</Filter>
+    </ClCompile>
+    <ClCompile Include="i_video.cpp">
+      <Filter>OldCode</Filter>
+    </ClCompile>
+    <ClCompile Include="info.cpp">
+      <Filter>OldCode</Filter>
+    </ClCompile>
+    <ClCompile Include="m_argv.cpp">
+      <Filter>OldCode</Filter>
+    </ClCompile>
+    <ClCompile Include="m_bbox.cpp">
+      <Filter>OldCode</Filter>
+    </ClCompile>
+    <ClCompile Include="m_cheat.cpp">
+      <Filter>OldCode</Filter>
+    </ClCompile>
+    <ClCompile Include="m_fixed.cpp">
+      <Filter>OldCode</Filter>
+    </ClCompile>
+    <ClCompile Include="m_menu.cpp">
+      <Filter>OldCode</Filter>
+    </ClCompile>
+    <ClCompile Include="m_misc.cpp">
+      <Filter>OldCode</Filter>
+    </ClCompile>
+    <ClCompile Include="m_random.cpp">
+      <Filter>OldCode</Filter>
+    </ClCompile>
+    <ClCompile Include="m_swap.cpp">
+      <Filter>OldCode</Filter>
+    </ClCompile>
+    <ClCompile Include="p_ceilng.cpp">
+      <Filter>OldCode</Filter>
+    </ClCompile>
+    <ClCompile Include="p_doors.cpp">
+      <Filter>OldCode</Filter>
+    </ClCompile>
+    <ClCompile Include="p_enemy.cpp">
+      <Filter>OldCode</Filter>
+    </ClCompile>
+    <ClCompile Include="p_floor.cpp">
+      <Filter>OldCode</Filter>
+    </ClCompile>
+    <ClCompile Include="p_inter.cpp">
+      <Filter>OldCode</Filter>
+    </ClCompile>
+    <ClCompile Include="p_lights.cpp">
+      <Filter>OldCode</Filter>
+    </ClCompile>
+    <ClCompile Include="p_map.cpp">
+      <Filter>OldCode</Filter>
+    </ClCompile>
+    <ClCompile Include="p_maputl.cpp">
+      <Filter>OldCode</Filter>
+    </ClCompile>
+    <ClCompile Include="p_mobj.cpp">
+      <Filter>OldCode</Filter>
+    </ClCompile>
+    <ClCompile Include="p_plats.cpp">
+      <Filter>OldCode</Filter>
+    </ClCompile>
+    <ClCompile Include="p_pspr.cpp">
+      <Filter>OldCode</Filter>
+    </ClCompile>
+    <ClCompile Include="p_saveg.cpp">
+      <Filter>OldCode</Filter>
+    </ClCompile>
+    <ClCompile Include="p_setup.cpp">
+      <Filter>OldCode</Filter>
+    </ClCompile>
+    <ClCompile Include="p_sight.cpp">
+      <Filter>OldCode</Filter>
+    </ClCompile>
+    <ClCompile Include="p_spec.cpp">
+      <Filter>OldCode</Filter>
+    </ClCompile>
+    <ClCompile Include="p_switch.cpp">
+      <Filter>OldCode</Filter>
+    </ClCompile>
+    <ClCompile Include="p_telept.cpp">
+      <Filter>OldCode</Filter>
+    </ClCompile>
+    <ClCompile Include="p_tick.cpp">
+      <Filter>OldCode</Filter>
+    </ClCompile>
+    <ClCompile Include="p_user.cpp">
+      <Filter>OldCode</Filter>
+    </ClCompile>
+    <ClCompile Include="r_bsp.cpp">
+      <Filter>OldCode</Filter>
+    </ClCompile>
+    <ClCompile Include="r_data.cpp">
+      <Filter>OldCode</Filter>
+    </ClCompile>
+    <ClCompile Include="r_draw.cpp">
+      <Filter>OldCode</Filter>
+    </ClCompile>
+    <ClCompile Include="r_main.cpp">
+      <Filter>OldCode</Filter>
+    </ClCompile>
+    <ClCompile Include="r_plane.cpp">
+      <Filter>OldCode</Filter>
+    </ClCompile>
+    <ClCompile Include="r_segs.cpp">
+      <Filter>OldCode</Filter>
+    </ClCompile>
+    <ClCompile Include="r_sky.cpp">
+      <Filter>OldCode</Filter>
+    </ClCompile>
+    <ClCompile Include="r_things.cpp">
+      <Filter>OldCode</Filter>
+    </ClCompile>
+    <ClCompile Include="s_sound.cpp">
+      <Filter>OldCode</Filter>
+    </ClCompile>
+    <ClCompile Include="sounds.cpp">
+      <Filter>OldCode</Filter>
+    </ClCompile>
+    <ClCompile Include="st_lib.cpp">
+      <Filter>OldCode</Filter>
+    </ClCompile>
+    <ClCompile Include="st_stuff.cpp">
+      <Filter>OldCode</Filter>
+    </ClCompile>
+    <ClCompile Include="tables.cpp">
+      <Filter>OldCode</Filter>
+    </ClCompile>
+    <ClCompile Include="v_video.cpp">
+      <Filter>OldCode</Filter>
+    </ClCompile>
+    <ClCompile Include="w_wad.cpp">
+      <Filter>OldCode</Filter>
+    </ClCompile>
+    <ClCompile Include="wi_stuff.cpp">
+      <Filter>OldCode</Filter>
+    </ClCompile>
+    <ClCompile Include="z_zone.cpp">
+      <Filter>OldCode</Filter>
+    </ClCompile>
+    <ClCompile Include="window.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="am_map.h" />
-    <ClInclude Include="d_englsh.h" />
-    <ClInclude Include="d_event.h" />
-    <ClInclude Include="d_french.h" />
-    <ClInclude Include="d_items.h" />
-    <ClInclude Include="d_main.h" />
-    <ClInclude Include="d_net.h" />
-    <ClInclude Include="d_player.h" />
-    <ClInclude Include="d_textur.h" />
-    <ClInclude Include="d_think.h" />
-    <ClInclude Include="d_ticcmd.h" />
-    <ClInclude Include="st_stuff.h" />
-    <ClInclude Include="tables.h" />
-    <ClInclude Include="v_video.h" />
-    <ClInclude Include="w_wad.h" />
-    <ClInclude Include="wi_stuff.h" />
-    <ClInclude Include="z_zone.h" />
-    <ClInclude Include="doomdata.h" />
-    <ClInclude Include="doomdef.h" />
-    <ClInclude Include="doomstat.h" />
-    <ClInclude Include="doomtype.h" />
-    <ClInclude Include="dstrings.h" />
-    <ClInclude Include="f_finale.h" />
-    <ClInclude Include="f_wipe.h" />
-    <ClInclude Include="g_game.h" />
-    <ClInclude Include="hu_lib.h" />
-    <ClInclude Include="hu_stuff.h" />
-    <ClInclude Include="i_net.h" />
-    <ClInclude Include="i_sound.h" />
-    <ClInclude Include="i_system.h" />
-    <ClInclude Include="i_video.h" />
-    <ClInclude Include="info.h" />
-    <ClInclude Include="m_argv.h" />
-    <ClInclude Include="m_bbox.h" />
-    <ClInclude Include="m_cheat.h" />
-    <ClInclude Include="m_fixed.h" />
-    <ClInclude Include="m_menu.h" />
-    <ClInclude Include="m_misc.h" />
-    <ClInclude Include="m_random.h" />
-    <ClInclude Include="m_swap.h" />
-    <ClInclude Include="p_inter.h" />
-    <ClInclude Include="p_local.h" />
-    <ClInclude Include="p_mobj.h" />
-    <ClInclude Include="p_pspr.h" />
-    <ClInclude Include="p_saveg.h" />
-    <ClInclude Include="p_setup.h" />
-    <ClInclude Include="p_spec.h" />
-    <ClInclude Include="p_tick.h" />
-    <ClInclude Include="r_bsp.h" />
-    <ClInclude Include="r_data.h" />
-    <ClInclude Include="r_defs.h" />
-    <ClInclude Include="r_draw.h" />
-    <ClInclude Include="r_local.h" />
-    <ClInclude Include="r_main.h" />
-    <ClInclude Include="r_plane.h" />
-    <ClInclude Include="r_segs.h" />
-    <ClInclude Include="r_sky.h" />
-    <ClInclude Include="r_state.h" />
-    <ClInclude Include="r_things.h" />
-    <ClInclude Include="s_sound.h" />
-    <ClInclude Include="sounds.h" />
-    <ClInclude Include="st_lib.h" />
-    <ClInclude Include="unistd.h" />
+    <ClInclude Include="am_map.h">
+      <Filter>OldCode</Filter>
+    </ClInclude>
+    <ClInclude Include="d_englsh.h">
+      <Filter>OldCode</Filter>
+    </ClInclude>
+    <ClInclude Include="d_event.h">
+      <Filter>OldCode</Filter>
+    </ClInclude>
+    <ClInclude Include="d_french.h">
+      <Filter>OldCode</Filter>
+    </ClInclude>
+    <ClInclude Include="d_items.h">
+      <Filter>OldCode</Filter>
+    </ClInclude>
+    <ClInclude Include="d_main.h">
+      <Filter>OldCode</Filter>
+    </ClInclude>
+    <ClInclude Include="d_net.h">
+      <Filter>OldCode</Filter>
+    </ClInclude>
+    <ClInclude Include="d_player.h">
+      <Filter>OldCode</Filter>
+    </ClInclude>
+    <ClInclude Include="d_textur.h">
+      <Filter>OldCode</Filter>
+    </ClInclude>
+    <ClInclude Include="d_think.h">
+      <Filter>OldCode</Filter>
+    </ClInclude>
+    <ClInclude Include="d_ticcmd.h">
+      <Filter>OldCode</Filter>
+    </ClInclude>
+    <ClInclude Include="doomdata.h">
+      <Filter>OldCode</Filter>
+    </ClInclude>
+    <ClInclude Include="doomdef.h">
+      <Filter>OldCode</Filter>
+    </ClInclude>
+    <ClInclude Include="doomstat.h">
+      <Filter>OldCode</Filter>
+    </ClInclude>
+    <ClInclude Include="doomtype.h">
+      <Filter>OldCode</Filter>
+    </ClInclude>
+    <ClInclude Include="dstrings.h">
+      <Filter>OldCode</Filter>
+    </ClInclude>
+    <ClInclude Include="f_finale.h">
+      <Filter>OldCode</Filter>
+    </ClInclude>
+    <ClInclude Include="f_wipe.h">
+      <Filter>OldCode</Filter>
+    </ClInclude>
+    <ClInclude Include="g_game.h">
+      <Filter>OldCode</Filter>
+    </ClInclude>
+    <ClInclude Include="hu_lib.h">
+      <Filter>OldCode</Filter>
+    </ClInclude>
+    <ClInclude Include="hu_stuff.h">
+      <Filter>OldCode</Filter>
+    </ClInclude>
+    <ClInclude Include="i_net.h">
+      <Filter>OldCode</Filter>
+    </ClInclude>
+    <ClInclude Include="i_sound.h">
+      <Filter>OldCode</Filter>
+    </ClInclude>
+    <ClInclude Include="i_system.h">
+      <Filter>OldCode</Filter>
+    </ClInclude>
+    <ClInclude Include="i_video.h">
+      <Filter>OldCode</Filter>
+    </ClInclude>
+    <ClInclude Include="info.h">
+      <Filter>OldCode</Filter>
+    </ClInclude>
+    <ClInclude Include="m_argv.h">
+      <Filter>OldCode</Filter>
+    </ClInclude>
+    <ClInclude Include="m_bbox.h">
+      <Filter>OldCode</Filter>
+    </ClInclude>
+    <ClInclude Include="m_cheat.h">
+      <Filter>OldCode</Filter>
+    </ClInclude>
+    <ClInclude Include="m_fixed.h">
+      <Filter>OldCode</Filter>
+    </ClInclude>
+    <ClInclude Include="m_menu.h">
+      <Filter>OldCode</Filter>
+    </ClInclude>
+    <ClInclude Include="m_misc.h">
+      <Filter>OldCode</Filter>
+    </ClInclude>
+    <ClInclude Include="m_random.h">
+      <Filter>OldCode</Filter>
+    </ClInclude>
+    <ClInclude Include="m_swap.h">
+      <Filter>OldCode</Filter>
+    </ClInclude>
+    <ClInclude Include="p_inter.h">
+      <Filter>OldCode</Filter>
+    </ClInclude>
+    <ClInclude Include="p_local.h">
+      <Filter>OldCode</Filter>
+    </ClInclude>
+    <ClInclude Include="p_mobj.h">
+      <Filter>OldCode</Filter>
+    </ClInclude>
+    <ClInclude Include="p_pspr.h">
+      <Filter>OldCode</Filter>
+    </ClInclude>
+    <ClInclude Include="p_saveg.h">
+      <Filter>OldCode</Filter>
+    </ClInclude>
+    <ClInclude Include="p_setup.h">
+      <Filter>OldCode</Filter>
+    </ClInclude>
+    <ClInclude Include="p_spec.h">
+      <Filter>OldCode</Filter>
+    </ClInclude>
+    <ClInclude Include="p_tick.h">
+      <Filter>OldCode</Filter>
+    </ClInclude>
+    <ClInclude Include="r_bsp.h">
+      <Filter>OldCode</Filter>
+    </ClInclude>
+    <ClInclude Include="r_data.h">
+      <Filter>OldCode</Filter>
+    </ClInclude>
+    <ClInclude Include="r_defs.h">
+      <Filter>OldCode</Filter>
+    </ClInclude>
+    <ClInclude Include="r_draw.h">
+      <Filter>OldCode</Filter>
+    </ClInclude>
+    <ClInclude Include="r_local.h">
+      <Filter>OldCode</Filter>
+    </ClInclude>
+    <ClInclude Include="r_main.h">
+      <Filter>OldCode</Filter>
+    </ClInclude>
+    <ClInclude Include="r_plane.h">
+      <Filter>OldCode</Filter>
+    </ClInclude>
+    <ClInclude Include="r_segs.h">
+      <Filter>OldCode</Filter>
+    </ClInclude>
+    <ClInclude Include="r_sky.h">
+      <Filter>OldCode</Filter>
+    </ClInclude>
+    <ClInclude Include="r_state.h">
+      <Filter>OldCode</Filter>
+    </ClInclude>
+    <ClInclude Include="r_things.h">
+      <Filter>OldCode</Filter>
+    </ClInclude>
+    <ClInclude Include="s_sound.h">
+      <Filter>OldCode</Filter>
+    </ClInclude>
+    <ClInclude Include="sounds.h">
+      <Filter>OldCode</Filter>
+    </ClInclude>
+    <ClInclude Include="st_lib.h">
+      <Filter>OldCode</Filter>
+    </ClInclude>
+    <ClInclude Include="st_stuff.h">
+      <Filter>OldCode</Filter>
+    </ClInclude>
+    <ClInclude Include="tables.h">
+      <Filter>OldCode</Filter>
+    </ClInclude>
+    <ClInclude Include="unistd.h">
+      <Filter>OldCode</Filter>
+    </ClInclude>
+    <ClInclude Include="v_video.h">
+      <Filter>OldCode</Filter>
+    </ClInclude>
+    <ClInclude Include="w_wad.h">
+      <Filter>OldCode</Filter>
+    </ClInclude>
+    <ClInclude Include="wi_stuff.h">
+      <Filter>OldCode</Filter>
+    </ClInclude>
+    <ClInclude Include="z_zone.h">
+      <Filter>OldCode</Filter>
+    </ClInclude>
+    <ClInclude Include="window.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Filter Include="OldCode">
+      <UniqueIdentifier>{51a0a50d-955f-42b8-bff1-825f04f85959}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
 </Project>
