--- a/src/Doom.vcxproj
+++ b/src/Doom.vcxproj
@@ -76,6 +76,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
+    <OutDir>$(SolutionDir)bin\$(Configuration)\</OutDir>
+    <IntDir>$(SolutionDir)out\$(Configuration)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
@@ -84,15 +86,17 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
+    <OutDir>$(SolutionDir)bin\$(Configuration)\</OutDir>
+    <IntDir>$(SolutionDir)out\$(Configuration)\</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
-      <PrecompiledHeader>
-      </PrecompiledHeader>
+      <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_CRT_SECURE_NO_WARNINGS;_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
+      <PrecompiledHeaderFile>precompiled.h</PrecompiledHeaderFile>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -102,12 +106,12 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
-      <PrecompiledHeader>
-      </PrecompiledHeader>
+      <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
+      <PrecompiledHeaderFile>precompiled.h</PrecompiledHeaderFile>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -118,13 +122,13 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
-      <PrecompiledHeader>
-      </PrecompiledHeader>
+      <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;_CRT_SECURE_NO_WARNINGS;NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
+      <PrecompiledHeaderFile>precompiled.h</PrecompiledHeaderFile>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -137,13 +141,13 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
-      <PrecompiledHeader>
-      </PrecompiledHeader>
+      <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
+      <PrecompiledHeaderFile>precompiled.h</PrecompiledHeaderFile>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -154,6 +158,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="CmdArgs.cpp" />
+    <ClCompile Include="Doom.cpp" />
+    <ClCompile Include="FileUtil.cpp" />
     <ClCompile Include="original\am_map.cpp" />
     <ClCompile Include="original\doomdef.cpp" />
     <ClCompile Include="original\doomstat.cpp" />
@@ -167,7 +174,6 @@
     <ClCompile Include="original\hu_lib.cpp" />
     <ClCompile Include="original\hu_stuff.cpp" />
     <ClCompile Include="original\info.cpp" />
-    <ClCompile Include="original\i_main.cpp" />
     <ClCompile Include="original\i_net.cpp" />
     <ClCompile Include="original\i_sound.cpp" />
     <ClCompile Include="original\i_system.cpp" />
@@ -216,10 +222,18 @@
     <ClCompile Include="original\wi_stuff.cpp" />
     <ClCompile Include="original\w_wad.cpp" />
     <ClCompile Include="original\z_zone.cpp" />
-    <ClCompile Include="screen.cpp" />
-    <ClCompile Include="window.cpp" />
+    <ClCompile Include="TextFile.cpp" />
+    <ClCompile Include="windows\Main.cpp" />
+    <ClCompile Include="windows\Screen.cpp" />
+    <ClCompile Include="windows\Window.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CmdArgs.h" />
+    <ClInclude Include="Doom.h" />
+    <ClInclude Include="DoomDef.h" />
+    <ClInclude Include="FileUtil.h" />
+    <ClInclude Include="StringUtil.h" />
+    <ClInclude Include="TextFile.h" />
     <ClInclude Include="original\am_map.h" />
     <ClInclude Include="original\doomdata.h" />
     <ClInclude Include="original\doomdef.h" />
@@ -283,8 +297,8 @@
     <ClInclude Include="original\wi_stuff.h" />
     <ClInclude Include="original\w_wad.h" />
     <ClInclude Include="original\z_zone.h" />
-    <ClInclude Include="screen.h" />
-    <ClInclude Include="window.h" />
+    <ClInclude Include="windows\Screen.h" />
+    <ClInclude Include="windows\Window.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
